# mtg-skills

./: .gitignore  CLAUDE.md  CONTEXT-MAP.md  LICENSE  README.md  prek.toml
.github/workflows/: ci.yml
commander-builder/: SKILL.md  pyproject.toml
commander-tuner/: SKILL.md  pyproject.toml
commander-tuner/src/commander_utils/: build_deck.py  bulk_loader.py  card_classify.py  card_search.py  card_summary.py  combo_search.py  cut_check.py  deck_diff.py  deck_stats.py  download_bulk.py  export_deck.py  find_commanders.py  format_config.py  legality_audit.py  mana_audit.py  mark_owned.py  mtga_import.py  names.py  parse_deck.py  price_check.py  scryfall_lookup.py  set_commander.py  web_fetch.py
cube-wizard/: CONTEXT.md  SKILL.md  pyproject.toml
deck-builder/: SKILL.md  pyproject.toml  src
deck-forge/: CONTEXT.md  SKILL.md  pyproject.toml  src
deck-forge/frontend/: .gitignore  .prettierignore  eslint.config.js  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
deck-forge/frontend/src/: App.svelte  app.css
deck-forge/frontend/src/components/: Avenues.svelte  Budgets.svelte  BuildMenu.svelte  CardChip.svelte  CardList.svelte  CardPreview.svelte  CardTile.svelte  CollectionDialog.svelte  ColorSources.svelte  Combos.svelte  Commanders.svelte  Counts.svelte  Curve.svelte  DeckList.svelte  Export.svelte  FilterWidget.svelte  Finalize.svelte  FinalizeButton.svelte  Find.svelte  ForgeFriend.svelte  Header.svelte  ImportDialog.svelte  LeftTabs.svelte  Mana.svelte  ManaCost.svelte  ManaGate.svelte  ManaGateModal.svelte  OracleText.svelte  Packages.svelte  ReplyText.svelte  SearchPanel.svelte  StatusBar.svelte  Tune.svelte  Warnings.svelte
deck-forge/frontend/src/lib/: agent.js  api.js  cards.js  filter.js  hover.js  mana.js  store.js
deck-strat/: CONTEXT.md  SKILL.md  pyproject.toml
deck-tuner/: SKILL.md  pyproject.toml
deck-wizard/: SKILL.md  pyproject.toml
docs/adr/: 0001-storefront-protocol-split.md  0002-stated-archetypes-drives-gauntlet.md  0003-no-resume-path.md  0004-defer-single-caller-helper-extraction.md  0005-bulk-loader-primary-scryfall-http-fallback.md  0006-attributed-art-catalog.md  0007-multi-source-attributed-art.md  0008-hybrid-rules-lawyer-integration.md  0009-reasoning-layer-never-names-cards.md  0010-interactive-skill-not-agent-sdk.md  0011-deck-forge-resume-autosave.md  0012-hydrated-deck-value.md  0013-deck-forge-engine-views-split.md  0014-signal-key-agreement-gate.md  0015-deck-forge-unified-find-surface.md  0016-deck-forge-handoff-execution-boundary.md  0017-deck-forge-import-inbound-compute-boundary.md  0018-deck-forge-collection-global-derived-two-slot.md  0019-deck-forge-partner-ranking-widening-primary.md  0020-finish-hydrateddeck-cutover-from-paths-boundary.md  0028-consume-phase-rs-not-fork.md  (+22 more)
lgs-search/: CONTEXT.md  SKILL.md  pyproject.toml
mtg-utils/: .gitignore  CONTEXT.md  SKILL.md  pyproject.toml
mtg-utils/src/mtg_utils/: _archetype_resolver.py  _draft_ai.py  _gauntlet_build.py  _name_index.py  _phase.py  _playtest_common.py  _sidecar.py  archetype_audit.py  art_fetcher.py  build_card_snapshot.py  build_deck.py  bulk_loader.py  card_classify.py  card_ir.py  card_ir_build.py  card_ir_crosswalk_build.py  card_ir_substrate_build.py  card_search.py  card_summary.py  combo_search.py  cube_balance.py  cube_config.py  cube_diff.py  cube_legality_audit.py  cube_stats.py  cubecobra_fetch.py  cut_check.py  deck.py  deck_diff.py  deck_forge_server.py  deck_rank.py  deck_signals.py  deck_stats.py  deck_tune.py  download_bulk.py  download_mtgjson.py  download_rules.py  edhrec_lookup.py  export_cube.py  find_commanders.py  (+22 more)
mtg-utils/src/mtg_utils/_card_ir/: __init__.py  _combinators.py  _substrate_purity.py  build.py  card_ir_convergence.py  clause_grammar.py  compat.py  crosswalk.py  dropped_clauses.py  field_corrections.py  load.py  metrics.py  overlay_corrections.py  project.py  recovery.py  supplement.py  text_idioms.py  tree_synthesis.py
mtg-utils/src/mtg_utils/_card_ir/mirror/: __init__.py  build.py  codegen.py  generated_types.py  infer.py  loader.py  runtime.py  schema.py  variants.py
mtg-utils/src/mtg_utils/_custom_format/: __init__.py  _common.py  shared_library.py
mtg-utils/src/mtg_utils/_deck_forge/: __init__.py  _ir_lookup.py  _migrated_keys.py  _signals_ir.py  _signals_regex.py  _subtypes.py  _sweep_detectors.py  agent_bridge.py  app.py  bridge_ledger.py  budgets.py  collection.py  crosswalk_consumer_diff.py  crosswalk_diff.py  crosswalk_signals.py  engine.py  events.py  exporters.py  ident_provenance.py  images.py  limiter_discounts.py  pair_reads.py  persistence.py  phase_crosscheck.py  production.py  ranking.py  rate.py  signal_diff.py  signal_keys.py  signal_specs.py  signals.py  signals_index.py  staples.py  state.py  views.py
mtg-utils/src/mtg_utils/_mtgjson/: __init__.py  adapter.py  load.py  rulings_index.py
mtg-utils/src/mtg_utils/_stores/: __init__.py  _common.py  atomic_empire.py  manapool.py  tcgplayer.py  tgp.py
mtg-utils/src/mtg_utils/_tuner/: __init__.py  ability_quality.py  bracket.py  classify.py  commander_fit.py  grant_coverage.py  metrics.py  shape.py  swaps.py  tune.py
mtg-utils/src/mtg_utils/data/: digital-rules.txt  format-staples.txt  known_tokens_fallback.toml
mtg-utils/src/mtg_utils/data/card_art/: __init__.py  _generic.txt  advisor.txt  aetherborn.txt  ajani.txt  alara.txt  alien.txt  ally.txt  aminatou.txt  amsterdam.txt  angel.txt  angrath.txt  antelope.txt  ape.txt  arcane.txt  archer.txt  archon.txt  arlinn.txt  armadillo.txt  army.txt  artifact.txt  artificer.txt  artist.txt  ashiok.txt  assassin.txt  assembly-worker.txt  astartes.txt  athlete.txt  atog.txt  attraction.txt  aura.txt  aurochs.txt  avatar.txt  azra.txt  background.txt  badger.txt  bahamut.txt  barbarian.txt  bard.txt  basilisk.txt  (+442 more)
mtg-utils/src/mtg_utils/data/gauntlets/: __init__.py  commander_cube.json  legacy_cube.json  modern_cube.json  pauper_cube.json  peasant_cube.json  vintage_cube.json
proxy-printer/: CONTEXT.md  SKILL.md  pyproject.toml
rules-lawyer/: SKILL.md  pyproject.toml
(+243 files in other folders)
