[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "commander-utils"
version = "0.1.0"
description = "MTG Commander deck tuning utilities"
requires-python = ">=3.12"
dependencies = ["click>=8.0", "requests>=2.28"]

[project.scripts]
parse-deck = "commander_utils.parse_deck:main"
scryfall-lookup = "commander_utils.scryfall_lookup:main"
edhrec-lookup = "commander_utils.edhrec_lookup:main"
download-bulk = "commander_utils.download_bulk:main"
web-fetch = "commander_utils.web_fetch:main"
deck-stats = "commander_utils.deck_stats:main"
card-summary = "commander_utils.card_summary:main"
deck-diff = "commander_utils.deck_diff:main"
set-commander = "commander_utils.set_commander:main"
mana-audit = "commander_utils.mana_audit:main"
cut-check = "commander_utils.cut_check:main"
build-deck = "commander_utils.build_deck:main"
price-check = "commander_utils.price_check:main"
combo-search = "commander_utils.combo_search:main"
combo-discover = "commander_utils.combo_search:discover_main"
export-deck = "commander_utils.export_deck:main"
card-search = "commander_utils.card_search:main"
find-commanders = "commander_utils.find_commanders:main"
legality-audit = "commander_utils.legality_audit:main"
mark-owned = "commander_utils.mark_owned:main"
mtga-import = "commander_utils.mtga_import:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["../tests/commander-tuner"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.9",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",       # pydocstyle — skip docstring enforcement
    "ANN",     # flake8-annotations — skip type annotation enforcement
    "ERA",     # eradicate — skip commented-out code detection
    "FIX",     # fixme — allow TODO/FIXME comments
    "TD",      # flake8-todos — skip TODO format enforcement
    "S",       # bandit — skip security checks (CLI tool, not a service)
    "INP001",  # implicit-namespace-package
    "T20",     # flake8-print — CLI tool uses print/click.echo
    "TRY003",  # long exception messages are fine
    "EM",      # exception message formatting — overly strict
    "PLR2004", # magic values
    "COM812",  # trailing comma — conflicts with formatter
    "ISC001",  # implicit string concat — conflicts with formatter
    "C901",    # complexity — Click commands are inherently branchy
    "PLR0912", # too many branches
    "PLR0913", # too many arguments — Click commands need many params
    "PLR0911", # too many return statements — parser helpers are naturally multi-exit
    "TC",      # type-checking imports
    "PLC0415", # non-top-level import
    "ARG002",  # unused method argument — mock patches require positional args
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "SLF001",  # private member access — tests need to test internals
    "E501",    # line length — test data and assertions can be long
    "PERF401", # list-append-in-loop — clarity over micro-optimization in tests
]
"../tests/*" = [
    "SLF001",  # private member access — tests need to test internals
    "E501",    # line length — test data and assertions can be long
    "PERF401", # list-append-in-loop — clarity over micro-optimization in tests
    "N999",    # invalid module name — directory uses hyphen convention
]
