[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cube-wizard"
version = "0.1.0"
description = "MTG cube building and tuning (shared from mtg-utils)"
requires-python = ">=3.12"
dependencies = ["click>=8.0", "requests>=2.28"]

[project.scripts]
# Reused from mtg-utils / deck-wizard
card-search = "mtg_utils.card_search:main"
card-summary = "mtg_utils.card_summary:main"
combo-discover = "mtg_utils.combo_search:discover_main"
combo-search = "mtg_utils.combo_search:main"
download-bulk = "mtg_utils.download_bulk:main"
download-rules = "mtg_utils.download_rules:main"
rules-lookup = "mtg_utils.rules_lookup:main"
rulings-lookup = "mtg_utils.rulings_lookup:main"
mark-owned = "mtg_utils.mark_owned:main"
price-check = "mtg_utils.price_check:main"
scryfall-lookup = "mtg_utils.scryfall_lookup:main"
web-fetch = "mtg_utils.web_fetch:main"

# Cube-specific entry points
archetype-audit = "mtg_utils.archetype_audit:main"
cube-balance = "mtg_utils.cube_balance:main"
cube-diff = "mtg_utils.cube_diff:main"
cube-legality-audit = "mtg_utils.cube_legality_audit:main"
cube-stats = "mtg_utils.cube_stats:main"
cubecobra-fetch = "mtg_utils.cubecobra_fetch:main"
export-cube = "mtg_utils.export_cube:main"
pack-simulate = "mtg_utils.pack_simulate:main"
parse-cube = "mtg_utils.parse_cube:main"
playtest-goldfish = "mtg_utils.playtest:goldfish_main"
playtest-gauntlet = "mtg_utils.playtest:gauntlet_main"
playtest-draft = "mtg_utils.playtest:draft_main"
playtest-install-phase = "mtg_utils.playtest:install_phase_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["../tests/cube-wizard"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.9",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",       # pydocstyle — skip docstring enforcement
    "ANN",     # flake8-annotations — skip type annotation enforcement
    "ERA",     # eradicate — skip commented-out code detection
    "FIX",     # fixme — allow TODO/FIXME comments
    "TD",      # flake8-todos — skip TODO format enforcement
    "S",       # bandit — skip security checks (CLI tool, not a service)
    "INP001",  # implicit-namespace-package
    "T20",     # flake8-print — CLI tool uses print/click.echo
    "TRY003",  # long exception messages are fine
    "EM",      # exception message formatting — overly strict
    "PLR2004", # magic values
    "COM812",  # trailing comma — conflicts with formatter
    "ISC001",  # implicit string concat — conflicts with formatter
    "C901",    # complexity — Click commands are inherently branchy
    "PLR0912", # too many branches
    "PLR0913", # too many arguments — Click commands need many params
    "PLR0911", # too many return statements — parser helpers are naturally multi-exit
    "TC",      # type-checking imports
    "PLC0415", # non-top-level import
    "ARG002",  # unused method argument — mock patches require positional args
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "SLF001",  # private member access — tests need to test internals
    "E501",    # line length — test data and assertions can be long
    "PERF401", # list-append-in-loop — clarity over micro-optimization in tests
]
"../tests/*" = [
    "SLF001",  # private member access — tests need to test internals
    "E501",    # line length — test data and assertions can be long
    "PERF401", # list-append-in-loop — clarity over micro-optimization in tests
    "N999",    # invalid module name — directory uses hyphen convention
]
