[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deck-forge"
version = "0.1.0"
description = "Collaborative, visual MTG deckbuilding (shared from mtg-utils)"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # The "Print proxies" run-here handoff renders a PDF in-process via proxy_print
    # (ADR-0016); reportlab is the PDF backend (lazily imported inside build_pdf).
    "reportlab>=4.0",
]

[project.scripts]
deck-forge = "mtg_utils.deck_forge_server:main"
# Read-only audit: diff detector firings vs phase-rs's parsed classification.
deck-forge-phase-crosscheck = "mtg_utils._deck_forge.phase_crosscheck:main"
# Reused mtg-utils CLIs deck-forge builds on (see CLAUDE.md / ADR-0004 pattern).
parse-deck = "mtg_utils.parse_deck:main"
scryfall-lookup = "mtg_utils.scryfall_lookup:main"
card-search = "mtg_utils.card_search:main"
combo-search = "mtg_utils.combo_search:main"
combo-discover = "mtg_utils.combo_search:discover_main"
mana-audit = "mtg_utils.mana_audit:main"
deck-stats = "mtg_utils.deck_stats:main"
price-check = "mtg_utils.price_check:main"
legality-audit = "mtg_utils.legality_audit:main"
archetype-audit = "mtg_utils.archetype_audit:main"
set-commander = "mtg_utils.set_commander:main"
export-deck = "mtg_utils.export_deck:main"
mark-owned = "mtg_utils.mark_owned:main"
download-bulk = "mtg_utils.download_bulk:main"
download-mtgjson = "mtg_utils.download_mtgjson:main"
download-rules = "mtg_utils.download_rules:main"
rules-lookup = "mtg_utils.rules_lookup:main"
rulings-lookup = "mtg_utils.rulings_lookup:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["../tests/deck-forge"]

[dependency-groups]
# httpx2 (not httpx): Starlette 1.x's TestClient prefers httpx2 and deprecates httpx.
dev = ["pytest>=9.0.2", "ruff>=0.9", "httpx2"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",
    "ANN",
    "ERA",
    "FIX",
    "TD",
    "S",
    "INP001",
    "T20",
    "TRY003",
    "EM",
    "PLR2004",
    "COM812",
    "ISC001",
    "C901",
    "PLR0912",
    "PLR0913",
    "PLR0911",
    "PLR0915",
    "TC",
    "PLC0415",
    "ARG002",
    "PERF401",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["SLF001", "E501", "PERF401"]
"../tests/*" = ["SLF001", "E501", "PERF401", "N999"]
