[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lgs-search"
version = "0.1.0"
description = "Multi-store MTG card sourcing across LGS and online (shared from mtg-utils)"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "playwright>=1.50",
    "beautifulsoup4>=4.12",
]

[project.scripts]
lgs-search = "mtg_utils.lgs_search:main"
parse-deck = "mtg_utils.parse_deck:main"
scryfall-lookup = "mtg_utils.scryfall_lookup:main"
card-search = "mtg_utils.card_search:main"
mark-owned = "mtg_utils.mark_owned:main"
download-bulk = "mtg_utils.download_bulk:main"
download-mtgjson = "mtg_utils.download_mtgjson:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["../tests/lgs-search"]

[dependency-groups]
dev = ["pytest>=9.0.2", "ruff>=0.9"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",
    "ANN",
    "ERA",
    "FIX",
    "TD",
    "S",
    "INP001",
    "T20",
    "TRY003",
    "EM",
    "PLR2004",
    "COM812",
    "ISC001",
    "C901",
    "PLR0912",
    "PLR0913",
    "PLR0911",
    "PLR0915",
    "TC",
    "PLC0415",
    "ARG002",
    "PERF401",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["SLF001", "E501", "PERF401"]
"../tests/*" = ["SLF001", "E501", "PERF401", "N999"]
