[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "proxy-printer"
version = "0.1.0"
description = "Print MTG card and token proxies as PDFs (shared from mtg-utils)"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "reportlab>=4.0",
]

[project.scripts]
proxy-print = "mtg_utils.proxy_print:main"
parse-deck = "mtg_utils.parse_deck:main"
download-bulk = "mtg_utils.download_bulk:main"
fetch-art = "mtg_utils.art_fetcher:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["../tests/proxy-printer"]

[dependency-groups]
dev = ["pytest>=9.0.2", "ruff>=0.9", "pypdf>=6.13.3"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",
    "ANN",
    "ERA",
    "FIX",
    "TD",
    "S",
    "INP001",
    "T20",
    "TRY003",
    "EM",
    "PLR2004",
    "COM812",
    "ISC001",
    "C901",
    "PLR0912",
    "PLR0913",
    "PLR0911",
    "PLR0915",
    "TC",
    "PLC0415",
    "ARG002",
    "PERF401",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["SLF001", "E501", "PERF401"]
"../tests/*" = ["SLF001", "E501", "PERF401", "N999"]
