[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rules-lawyer"
version = "0.1.0"
description = "MTG Comprehensive Rules lookup and per-card rulings fetcher (shared from mtg-utils)"
requires-python = ">=3.12"
dependencies = ["click>=8.0", "requests>=2.28"]

[project.scripts]
# Rules-lawyer-specific entry points
download-rules = "mtg_utils.download_rules:main"
rules-lookup = "mtg_utils.rules_lookup:main"
rulings-lookup = "mtg_utils.rulings_lookup:main"

# Reused from mtg-utils (rules-lawyer commonly uses these for card-name
# resolution and oracle-text context before looking up rules/rulings).
card-search = "mtg_utils.card_search:main"
card-summary = "mtg_utils.card_summary:main"
download-bulk = "mtg_utils.download_bulk:main"
scryfall-lookup = "mtg_utils.scryfall_lookup:main"
web-fetch = "mtg_utils.web_fetch:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["../tests/rules-lawyer"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.9",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",       # pydocstyle — skip docstring enforcement
    "ANN",     # flake8-annotations — skip type annotation enforcement
    "ERA",     # eradicate — skip commented-out code detection
    "FIX",     # fixme — allow TODO/FIXME comments
    "TD",      # flake8-todos — skip TODO format enforcement
    "S",       # bandit — skip security checks (CLI tool, not a service)
    "INP001",  # implicit-namespace-package
    "T20",     # flake8-print — CLI tool uses print/click.echo
    "TRY003",  # long exception messages are fine
    "EM",      # exception message formatting — overly strict
    "PLR2004", # magic values
    "COM812",  # trailing comma — conflicts with formatter
    "ISC001",  # implicit string concat — conflicts with formatter
    "C901",    # complexity — Click commands are inherently branchy
    "PLR0912", # too many branches
    "PLR0913", # too many arguments — Click commands need many params
    "PLR0911", # too many return statements — parser helpers are naturally multi-exit
    "TC",      # type-checking imports
    "PLC0415", # non-top-level import
    "ARG002",  # unused method argument — mock patches require positional args
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "SLF001",
    "E501",
    "PERF401",
]
"../tests/*" = [
    "SLF001",
    "E501",
    "PERF401",
    "N999",
]
